--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
         </footer>
     </default-layout>
     <script type="module" src="/src/advect.ts"></script>
+    <script type="module" src="/src/compiler.ts"></script>
+
   </body>
 </html>
