stage set for bindings

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
           <p class="text-center">Made with ❤️</p>
         </footer>
     </default-layout>
-    <script type="module" src="/src/advect.ts"></script>
+    <script type="module" src="/src/dds.ts"></script>
   </body>
 </html>
