--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <!-- Include plugins after the script, -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/adv" src="components/default-layout.html"></script>
-    <script type="text/adv" src="components/todo-component.html"></script>
+    <script type="text/adv" src="components/basic/default-layout.html"></script>
+    <script type="text/adv" src="components/basic/todo-component.html"></script>
     <link rel="stylesheet" href="styles.css" />
     <style>
      
@@ -17,7 +17,7 @@
   <body>
     <default-layout exportparts="content">
         <header id="test" slot="header">
-          <h2 class="text-4xl mb-5 text-center">Todo List App in HTMV</h2>
+          <h2 class="text-4xl mb-5 text-center">Todo List App in Advect</h2>
         </header>
         
         <todo-component slot="content">
