--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <!-- Include plugins after the script, -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="text/adv" src="components/basic-refresh/todo-component.html"></script>
+  <script type="text/adv" src="components/basic/todo-component.html"></script>
   <link rel="stylesheet" href="styles.css" />
   <style>
 
@@ -20,9 +20,7 @@
     <h2 class="text-4xl mb-5 text-center">Todo List App in Advect</h2>
   </header>
 
-  <todo-component slot="content">
-    <h2 slot="title">My Todo List custom title
-    </h2>
+  <todo-component>
   </todo-component>
 
   <footer slot="footer">
