fuck it auto renders on adv-views

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <!-- Include plugins after the script, -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="text/adv" src="components/basic/todo-component.html"></script>
+
+<!-- Import Cirrus from CDN with relevant fonts -->
+
   <link rel="stylesheet" href="styles.css" />
   <style>
 
@@ -22,6 +25,10 @@
 
   <todo-component>
   </todo-component>
+<div>
+  <emote-button></emote-button>
+
+</div>
 
   <footer slot="footer">
     <p class="text-center">Made with ❤️</p>
