--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Include plugins after the script, -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="text/adv" src="components/basic/todo-component.html"></script>
-
+  <script type="module" src="https://cdn.skypack.dev/twind/shim"></script>
 <!-- Import Cirrus from CDN with relevant fonts -->
 
   <link rel="stylesheet" href="styles.css" />
