--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
       <section class="container">
         <scene-3d src="/3d/boombox/BoomBox.glb" exportparts="loader"></scene-3d>
       </section>
+
+      <section>
+        <adv-view data-name="john" render="markdown">
+          # hello {{name}}
+          - a list
+          - of items
+        </adv-view>
+      </section>
   </main>
   <footer class="container">
     <p class="text-center">Made with ❤️</p>
