clean up and rerenders next docs

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
       <section class="container">
         <scene-3d src="/3d/boombox/BoomBox.glb" exportparts="loader"></scene-3d>
       </section>
-
+      <section>
+          <adv-view>
+            <button class="w-[200px] bg-[blue] hover:bg-[dodgerblue]">hello</button>
+          </adv-view>
+      </section>
       <section>
         <adv-view data-name="john" render="markdown">
           # hello {{name}}
