--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" hidden>
+
 <head>
   <meta charset="UTF-8" />
-  
+  <script type="module" src="https://cdn.skypack.dev/twind/shim"></script>
 
+  <!-- <script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script> -->
+  <script src="https://unpkg.com/htmx.org@2.0.1/dist/htmx.js"
+    integrity="sha384-gpIh5aLQ0qmX8kZdyhsd6jA24uKLkqIr1WAGtantR4KsS97l/NRBvh8/8OYGThAf"
+    crossorigin="anonymous"></script>
   <!-- Include plugins after the script, -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="text/adv" src="components/basic/todo-component.html"></script>
+  <script type="text/adv" src="components/app/todo-component.html"></script>
   <script type="text/adv" src="components/basic/tw-button.html"></script>
   <script type="text/adv" src="components/basic/pw-checker.html"></script>
-  <script type="text/adv" src="components/basic/scene-3d.html"></script>
+  <script type="text/adv" src="components/basic/simple-counter.html"></script>
+  <script type="text/adv" src="components/basic/eta-test.html"></script>
+
+
+  <!-- <script type="text/adv" src="components/basic/scene-3d.html"></script>   -->
+
+
 
   <link rel="stylesheet" href="styles.css" />
   <title>Advect</title>
 </head>
+
 <body class="">
   <header>
     <div>
@@ -34,52 +46,101 @@
     </nav>
   </header>
   <main>
-    <section class="hero">
+    <style>
+      @scope{
+        :scope{
+          scroll-snap-type: mandatory;
+        }
+      }
+    </style>
+    <section class="bg-gray-50 text-black">
       <style>
-        @scope{
-          :scope{
-            background-color: red;  
-            background-image: linear-gradient(90deg, #f12711 0%, #f5af19 100%);
+        @scope {
+          :scope {
+            scroll-snap-align: start;
+            --grid-color: rgba(0, 0, 0, 0.1);
+            --grid-size: 20px;
+            background-attachment:fixed;
+            background-image: 
+              linear-gradient(var(--grid-color) 0.1em, transparent 0.1em),
+              linear-gradient(90deg, var(--grid-color) 0.1em, transparent 0.1em),
+              linear-gradient(180deg, transparent, blue )
+            ;
+            background-size: 
+              var(--grid-size) var(--grid-size),
+              var(--grid-size) var(--grid-size),
+              cover
+              ;
+            background-repeat: repeat, repeat, no-repeat;
+            background-position: center, center center;
           }
         }
       </style>
-      <div class="container content">
-        <h1>
-          Advect
-        </h1>
-        <h2>
-          A simple web component library
-        </h2>
+      <div class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center">
+        <div class="mx-auto max-w-xl text-center">
+          <h1 class="text-3xl font-extrabold sm:text-5xl">
+            Understand User Flow.
+            <strong class="font-extrabold text-red-700 sm:block"> Increase Conversion. </strong>
+          </h1>
+
+          <p class="mt-4 sm:text-xl/relaxed">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt illo tenetur fuga ducimus
+            numquam ea!
+          </p>
+
+          <div class="mt-8 flex flex-wrap justify-center gap-4">
+            <a class="block w-full rounded bg-red-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-red-700 focus:outline-none focus:ring active:bg-red-500 sm:w-auto"
+              href="#">
+              Get Started
+            </a>
+
+            <a class="block w-full rounded px-12 py-3 text-sm font-medium text-red-600 shadow hover:text-red-700 focus:outline-none focus:ring active:text-red-500 sm:w-auto"
+              href="#">
+              Learn More
+            </a>
+          </div>
+        </div>
       </div>
     </section>
-      <section class="container">
-        <article>
-          <h3>Wow</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quam aspernatur veniam mollitia illum nulla, quae cumque tenetur doloribus repellendus suscipit deleniti aut natus, itaque nobis reiciendis omnis obcaecati beatae?
-        </article>
-        <todo-component></todo-component>
-      </section>
-      <section class="container">
-        <tw-button></tw-button>
-      </section>
-      <section class="container">
-        <pw-checker></pw-checker> 
-      </section>
-      <section class="container">
-        <scene-3d src="/3d/boombox/BoomBox.glb" exportparts="loader"></scene-3d>
-      </section>
-      <section>
-          <adv-view>
-            <button class="w-[200px] bg-[blue] hover:bg-[dodgerblue]">hello</button>
-          </adv-view>
-      </section>
-      <section>
-        <adv-view data-name="john" render="markdown">
-          # hello {{name}}
-          - a list
-          - of items
-        </adv-view>
-      </section>
+    <section class="container">
+      <article>
+        <h3>Wow</h3>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quam aspernatur veniam mollitia illum nulla,
+        quae cumque tenetur doloribus repellendus suscipit deleniti aut natus, itaque nobis reiciendis omnis obcaecati
+        beatae?
+      </article>
+      <todo-component></todo-component>
+    </section>
+    <section class="container">
+      <tw-button></tw-button>
+    </section>
+    <section class="container">
+      <pw-checker></pw-checker>
+    </section>
+    <section class="container">
+      <h2>counter</h2>
+      <simple-counter></simple-counter>
+
+   
+    </section>
+    <section class="container">
+      <adv-view>
+        <button class="w-[200px] bg-[blue] hover:bg-[dodgerblue]">hello</button>
+      </adv-view>
+    </section>
+    <section class="container">
+      <adv-view data-name="john" render="markdown">
+        # hello {{it.name}}
+        - a list
+        - of items
+      </adv-view>
+    </section>
+    <section>
+      <eta-test>
+        
+      </eta-test>
+    </section>
+
   </main>
   <footer class="container">
     <p class="text-center">Made with ❤️</p>
@@ -88,5 +149,7 @@
 
 
   <script type="module" src="/src/advect.ts"></script>
+
 </body>
+
 </html>
