--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <script type="text/adv" src="components/basic/pw-checker.html"></script>
   <script type="text/adv" src="components/basic/simple-counter.html"></script>
   <script type="text/adv" src="components/basic/eta-test.html"></script>
+  <script type="text/adv" src="components/does-not-exist.html"></script>
+
 
 
   <!-- <script type="text/adv" src="components/basic/scene-3d.html"></script>   -->
