component updates and package desc

--- a/project/index.html
+++ b/project/index.html
@@ -145,10 +145,10 @@
       </eta-test>
     </section>
     <section class="container flex justify-center py-[100px]">
+      this is some text before
       <like-button>
-          <span slot>Like</span>
-          <span slot>Dislike</span>
       </like-button>
+      this is some text after
     </section>
   </main>
   <footer class="container">
