--- a/project/index.html
+++ b/project/index.html
@@ -125,7 +125,7 @@
       <h2>counter</h2>
       <simple-counter></simple-counter>
 
-   
+   <img src="https://archives.bulbagarden.net/media/upload/thumb/d/dd/Boulder_Badge.png/50px-Boulder_Badge.png" />
     </section>
     <section class="container">
       <adv-view>
