yea bump cs for now

--- a/project/index.html
+++ b/project/index.html
@@ -18,7 +18,6 @@
     <script type="text/adv" src="components/basic/eta-test.html"></script>
     <script type="text/adv" src="components/does-not-exist.html"></script>
     <script type="text/adv" src="components/kit/like-button.html"></script>
-    <script type="text/adv" src="components/kit/monaco-editor.html"></script>
 
     <!-- <script type="text/adv" src="components/basic/scene-3d.html"></script>   -->
 
@@ -113,7 +112,6 @@
         </div>
       </section>
       <section>
-        <monaco-editor-2></monaco-editor-2>
       </section>
       <section class="container">
         <article>
@@ -133,6 +131,7 @@
       </section>
       <section class="container">
         <h2>counter</h2>
+        <simple-counter></simple-counter>
 
         <img
           src="https://archives.bulbagarden.net/media/upload/thumb/d/dd/Boulder_Badge.png/50px-Boulder_Badge.png"
