updated renderer basics fix load function

--- a/project/index.html
+++ b/project/index.html
@@ -147,12 +147,7 @@
       <section class="container">
         <h2>This should be md</h2>
         <adv-view id="view_1" data-name="john" render="md" onload="$self.render()">
-          <!-- <template>
-            <script>
-              $self.render();
-            </script>
-          </template> -->
-          # hello {{= it.name}} 
+          # hello {{= name}} 
           - a list 
           - of items
         </adv-view>
