--- a/project/index.html
+++ b/project/index.html
@@ -16,6 +16,8 @@
     <script type="text/adv" src="components/basic/simple-counter.html"></script>
     <script type="text/adv" src="components/basic/eta-test.html"></script>
     <script type="text/adv" src="components/kit/like-button.html"></script>
+    <script type="text/adv" src="components/basic/light-dom.html"></script>
+
 
     <!-- <script type="text/adv" src="components/basic/scene-3d.html"></script>   -->
 
@@ -170,6 +172,11 @@
       
           </script>
         </div>
+      </section>
+      <section class="container">
+        <light-dom>
+          <span>Wow</span>
+        </light-dom>
       </section>
     </main>
     <footer class="container">
