--- a/project/index.html
+++ b/project/index.html
@@ -175,7 +175,7 @@
       </section>
       <section class="container">
         <light-dom>
-          <span>Wow</span>
+          <span ref="stuff">Wow</span>
         </light-dom>
       </section>
     </main>
